force-app/main/default/objects/Account_Document__c/Account_Document__c.object-meta.xml
<CustomObject>
    <description>Tracks documents (ID cards, passports, contracts, invoices, etc.) belonging to a client, stored on the client&apos;s Account record.</description>
    <label>Account Document</label>
    <nameField>
        <displayFormat>AD-{0000}</displayFormat>
        <label>Account Document Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Documents</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>